WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145724
[EFL][GTK] Fix build break since
r185262
https://bugs.webkit.org/show_bug.cgi?id=145724
Summary
[EFL][GTK] Fix build break since r185262
Gyuyoung Kim
Reported
2015-06-06 01:46:39 PDT
EFL and GTK ports have been broken since
r185262
.
Attachments
Patch
(4.56 KB, patch)
2015-06-06 01:47 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Patch
(5.80 KB, patch)
2015-06-06 03:42 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Patch
(6.88 KB, patch)
2015-06-06 19:07 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Patch
(6.90 KB, patch)
2015-06-06 19:28 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Patch
(6.90 KB, patch)
2015-06-07 00:16 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2015-06-06 01:47:53 PDT
Created
attachment 254410
[details]
Patch
Gyuyoung Kim
Comment 2
2015-06-06 03:42:10 PDT
Created
attachment 254411
[details]
Patch
Gyuyoung Kim
Comment 3
2015-06-06 05:01:08 PDT
I'm not sure if this fix is correct. Anyone give me comment ?
Michael Catanzaro
Comment 4
2015-06-06 07:37:17 PDT
Can we just get rid of those legacy directory functions? It's not clear to me why we need two different places for these.
Gyuyoung Kim
Comment 5
2015-06-06 19:07:36 PDT
Created
attachment 254421
[details]
Patch
Gyuyoung Kim
Comment 6
2015-06-06 19:28:32 PDT
Created
attachment 254422
[details]
Patch
Gyuyoung Kim
Comment 7
2015-06-06 19:29:49 PDT
(In reply to
comment #4
)
> Can we just get rid of those legacy directory functions? It's not clear to > me why we need two different places for these.
I'm not sure what is correct fix now. However I want to fix EFL and GTK as soon as possible. I'd like to land this patch, then how about fix correctly for each port ?
Gyuyoung Kim
Comment 8
2015-06-07 00:04:02 PDT
Comment on
attachment 254422
[details]
Patch To make EFL and GTK bot to green for now, I land this patch though this may not correct fix. If there is wrong fix, please fix it on following patch.
Gyuyoung Kim
Comment 9
2015-06-07 00:16:28 PDT
Created
attachment 254432
[details]
Patch
WebKit Commit Bot
Comment 10
2015-06-07 01:48:57 PDT
Comment on
attachment 254432
[details]
Patch Clearing flags on attachment: 254432 Committed
r185300
: <
http://trac.webkit.org/changeset/185300
>
WebKit Commit Bot
Comment 11
2015-06-07 01:49:01 PDT
All reviewed patches have been landed. Closing bug.
Carlos Garcia Campos
Comment 12
2015-06-07 04:03:20 PDT
Yes, this was indeed wrong, at least for GTK+ port that has API to se the disk cache directory. There are actually two problems here. One is that we need to override the disk cache directory after the WebProcessPool has been created, and the other problem is that disk cache directory has been removed from web process pool configuration. We need to bring it back while we have network support in the web process.
Gyuyoung Kim
Comment 13
2015-06-07 07:17:22 PDT
(In reply to
comment #12
)
> Yes, this was indeed wrong, at least for GTK+ port that has API to se the > disk cache directory. There are actually two problems here. One is that we > need to override the disk cache directory after the WebProcessPool has been > created, and the other problem is that disk cache directory has been removed > from web process pool configuration. We need to bring it back while we have > network support in the web process.
Thank you for your explanation. I will also follow this problem for EFL port too. Anyway now EFL and GTK bots are fine.
Carlos Garcia Campos
Comment 14
2015-06-07 23:26:40 PDT
(In reply to
comment #13
)
> (In reply to
comment #12
) > > Yes, this was indeed wrong, at least for GTK+ port that has API to se the > > disk cache directory. There are actually two problems here. One is that we > > need to override the disk cache directory after the WebProcessPool has been > > created, and the other problem is that disk cache directory has been removed > > from web process pool configuration. We need to bring it back while we have > > network support in the web process. > > Thank you for your explanation. I will also follow this problem for EFL port > too. Anyway now EFL and GTK bots are fine.
Oh, right, I guess you need to append "webkit" to the disk cache directory for EFL in the UI process too.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug