[EFL][GTK] Fix build  break since r185262 https://bugs.webkit.org/show_bug.cgi?id=145724

Unreviewed, fix build break for EFL and GTK ports.


* UIProcess/API/APIWebsiteDataStore.cpp:
(API::WebsiteDataStore::defaultLocalStorageDirectory):
(API::WebsiteDataStore::defaultWebSQLDatabaseDirectory):
(API::WebsiteDataStore::defaultNetworkCacheDirectory):
(API::WebsiteDataStore::defaultApplicationCacheDirectory):
(API::WebsiteDataStore::defaultMediaKeysStorageDirectory):
(API::WebsiteDataStore::defaultIndexedDBDatabaseDirectory):
* UIProcess/efl/WebProcessPoolEfl.cpp:
(WebKit::WebProcessPool::legacyPlatformDefaultNetworkCacheDirectory):
(WebKit::WebProcessPool::platformDefaultDiskCacheDirectory): Deleted.
* WebProcess/soup/WebProcessSoup.cpp:
(WebKit::WebProcess::platformInitializeWebProcess):


Canonical link: https://commits.webkit.org/163779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185300 268f45cc-cd09-0410-ab3c-d52691b4dbfc