Source/WebKit2/UIProcess/gtk/WebProcessPoolGtk.cpp
@@ -142,7 +142,7 @@ String WebProcessPool::legacyPlatformDefaultMediaKeysStorageDirectory()
     return WebCore::filenameToString(mediaKeysStorageDirectory.get());
 }
 
-String WebProcessPool::platformDefaultDiskCacheDirectory() const
+String WebProcessPool::legacyPlatformDefaultNetworkCacheDirectory()
 {
     GUniquePtr<char> diskCacheDirectory(g_build_filename(g_get_user_cache_dir(), g_get_prgname(), nullptr));
     return WebCore::filenameToString(diskCacheDirectory.get());
